# FYP

./: .gitignore  IMPLEMENTATION_SUMMARY.md  INVARIANTS.md  MODULE_1_COMPLETION.bak  MODULE_4_IMPLEMENTATION_COMPLETE.md  PERP_DEX_PLAN.md  QUICK_START_3_4_3_5.md  README.md  README1.md  README2.md  README4.md  README4_3_4.md  README4_5_6.md  README5.md  RUN_PROJECT.md  TEST_SUITE_COMPLETION.md  TRADING_TEST_SUITE_COMPLETE.md  localnet-config.json
solrush-dex/: Anchor.toml  MODULE_3_1_REPORT.md  MODULE_3_1_SUMMARY.md  TESTING_GUIDE.md  package-lock.json  package.json  tsconfig.json
solrush-dex/programs/solrush-dex/: Cargo.toml
solrush-dex/programs/solrush-dex/src/: constants.rs  errors.rs  events.rs  lib.rs  perps_math.rs  state.rs  utils.rs
solrush-dex/programs/solrush-dex/src/errors/: mod.rs
solrush-dex/programs/solrush-dex/src/events/: mod.rs  order_events.rs  perps_events.rs  pool_events.rs  rush_events.rs  swap_events.rs
solrush-dex/programs/solrush-dex/src/instructions/: limit_orders.rs  mod.rs  perps.rs  pool.rs  rewards.rs  swap.rs
solrush-dex/programs/solrush-dex/src/state/: insurance_vault.rs  limit_order.rs  mod.rs  perps_global_state.rs  perps_market.rs  perps_oracle_price.rs  perps_position.rs  perps_user_account.rs  pool.rs  rush_config.rs  user_position.rs
solrush-frontend/: README.md  package-lock.json  package.json  playwright.config.ts
test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-100-41R8m8EuuowKAViTZNcvax3XKTtexGezPqBT3tcoywrF.tar.zst  snapshot-200-AYj8ib8PrWbj3DhG2agSUWz8eimstqujU122gHSopTGJ.tar.zst  validator-keypair.json  (+2 more)
(+182 files in other folders)
